@@ -96,6 +96,7 @@ struct TrailSettings {
     ALTITUDE,
     VARIO_1_DOTS,
     VARIO_2_DOTS,
+    VARIO_DOTS_AND_LINES,
   } type;
 
   enum class Length: uint8_t {
