@@ -174,17 +174,26 @@ TrailRenderer::Draw(Canvas &canvas, const TraceComputer &trace_computer,
                                                   value_min, value_max);
         if (negative(it->GetVario()) &&
             (settings.type == TrailSettings::Type::VARIO_1_DOTS ||
-             settings.type == TrailSettings::Type::VARIO_2_DOTS)) {
+             settings.type == TrailSettings::Type::VARIO_2_DOTS ||
+             settings.type == TrailSettings::Type::VARIO_DOTS_AND_LINES)) {
           canvas.SelectNullPen();
           canvas.Select(look.trail_brushes[color_index]);
           canvas.DrawCircle((pt.x + last_point.x) / 2, (pt.y + last_point.y) / 2,
                             look.trail_widths[color_index]);
-
         } else {
-          if (!scaled_trail)
-            canvas.Select(look.trail_pens[color_index]);
-          else
+          // positive vario case
+
+          if (settings.type == TrailSettings::Type::VARIO_DOTS_AND_LINES) {
+            canvas.Select(look.trail_brushes[color_index]);
+            canvas.Select(look.trail_pens[color_index]); //fixed-width pen
+            canvas.DrawCircle((pt.x + last_point.x) / 2, (pt.y + last_point.y) / 2,
+                              look.trail_widths[color_index]);
+          } else if (scaled_trail)
+            // width scaled to vario
             canvas.Select(look.scaled_trail_pens[color_index]);
+          else
+            // fixed-width pen
+            canvas.Select(look.trail_pens[color_index]);
 
           canvas.DrawLinePiece(last_point, pt);
         }
